WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26392
In html, modification of xlink:href of an newly inserted svg image does not work.
https://bugs.webkit.org/show_bug.cgi?id=26392
Summary
In html, modification of xlink:href of an newly inserted svg image does not w...
arno.
Reported
2009-06-14 15:42:07 PDT
Hi, in a html document, I create a <svg:image> element and attach it to the document. Then, I try to change it's href attribute to point to another resource, but it does not work. See testcase. I noticed that bug on webkit-gtk, and did not have the opportunity to test on different backends.
Attachments
Add attachment
proposed patch, testcase, etc.
arno.
Comment 1
2009-06-14 15:43:32 PDT
When browsing
http://renevier.net/bugs/webkit_svg_image_href.html
, image is green with gecko and opera. It's yellow with GtkLauncher.
Rob Buis
Comment 2
2009-06-16 12:31:35 PDT
I think this is the same problem as in
bug 26328
. With my fix from that bug applied I see a green image. Cheers, Rob.
Rob Buis
Comment 3
2009-06-24 23:30:14 PDT
Landed in
r45095
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug