        Reviewed by Niko.

https://bugs.webkit.org/show_bug.cgi?id=26392
        Bug 26392: In html, modification of xlink:href of an newly inserted svg image does not work.
        https://bugs.webkit.org/show_bug.cgi?id=26328
        Bug 26328: changing href attribute of svg images dows not work when changing display attribute as well

        React to href updates even when there is no renderer, i.e. display=none.

        Tests: svg/custom/js-update-image-and-display.svg
               svg/custom/js-update-image-and-display2.svg
               svg/custom/js-update-image-and-display3.svg

Canonical link: https://commits.webkit.org/36857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45095 268f45cc-cd09-0410-ab3c-d52691b4dbfc