WebCore/svg/SVGImageElement.cpp
@@ -1,6 +1,6 @@
 /*
     Copyright (C) 2004, 2005, 2006, 2008 Nikolas Zimmermann <zimmermann@kde.org>
-                  2004, 2005, 2006, 2007, 2008 Rob Buis <buis@kde.org>
+                  2004, 2005, 2006, 2007, 2008, 2009 Rob Buis <buis@kde.org>
                   2006 Alexander Kellett <lypanov@kde.org>
 
     This file is part of the KDE project
@@ -93,10 +93,11 @@ void SVGImageElement::svgAttributeChanged(const QualifiedName& attrName)
 {
     SVGStyledTransformableElement::svgAttributeChanged(attrName);
 
+    if (SVGURIReference::isKnownAttribute(attrName))
+        m_imageLoader.updateFromElementIgnoringPreviousError();
+
     if (!renderer())
         return;
-
-    bool isURIAttribute = SVGURIReference::isKnownAttribute(attrName);
 
     if (attrName == SVGNames::xAttr || attrName == SVGNames::yAttr ||
         attrName == SVGNames::widthAttr || attrName == SVGNames::heightAttr ||
@@ -104,12 +105,8 @@ void SVGImageElement::svgAttributeChanged(const QualifiedName& attrName)
         SVGTests::isKnownAttribute(attrName) ||
         SVGLangSpace::isKnownAttribute(attrName) ||
         SVGExternalResourcesRequired::isKnownAttribute(attrName) ||
-        isURIAttribute ||
         SVGStyledTransformableElement::isKnownAttribute(attrName)) {
         renderer()->setNeedsLayout(true);
-
-        if (isURIAttribute)
-            m_imageLoader.updateFromElementIgnoringPreviousError();
     }
 }
 
